Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,19 @@
 <html>
 	<head>
 		<title>Food Web</title>
+		<link href="default.css" type="text/css">
 	</head>
 
 	<body>
 	<h1>Share the food I like.</h1>
 	<p>Welcome to my website. I am very happy.</p>
+	{% for post in posts %}
+		<div>
+			<p>published: {{ post.published_date }}</p>
+			<h1><a href="#">{{ post }}</a></h1>
+			<p>{{ post.text | linebreaksbr }}</p>
+		</div>
+	{% endfor %}
 	</body>
 
 </html>
