Add view and template for detailed blog post as well as update CSS

--- a/blog/static/css/blog.scss
+++ b/blog/static/css/blog.scss
@@ -48,6 +48,11 @@ article {
   p {
     background-color: $article-bg-color;
   }
+  p.pub-date {
+    display: inline;
+    float: right;
+    background-color: transparent;
+  }
   h1 {
     color: $heading-color;
     font-size: 1.2em;
