--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -32,6 +32,10 @@ article {
   border-bottom: 1px solid #ccc; }
   article p {
     background-color: #EEE; }
+  article p.pub-date {
+    display: inline;
+    float: right;
+    background-color: transparent; }
   article h1 {
     color: #B0413E;
     font-size: 1.2em; }
