--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,15 +1,16 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-  <article>
+  <article class="panel panel-default">
 
-    {% if post.published_date %}
-      <div class="date">
-        {{ post.published_date }}
-      </div>
-    {% endif %}
-    <h1>{{ post.title }}</h1>
-    <p>{{ post.text|linebreaksbr }}</p>
+       
+    <div class="panel-heading">
+      <h1>{{ post.title }}
+        {% if post.published_date %}
+          <small>{{ post.published_date }}</small>
+        {% endif %}
+      </h1></div>
+    <div class="panel-body"><p>{{ post.text|linebreaksbr }}</p></div>
 
   </article>
 {% endblock %}
