--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,43 +1,80 @@
-html,
-body,
-ul,
-ol {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
 
 body {
-  text-align: center;
-  background-color: #F5F0F6; }
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+body {
+  background-color: #F5F0F6;
+  background-image: url("../img/bg.png"); }
 
 #wrapper {
-  margin: 0 auto; }
+  margin: 0 auto;
+  height: 100%; }
 
-h1, p {
-  padding: 10px; }
-
-h1 a {
-  color: #FCA205;
-  font: "Bellefair", serif; }
+.col-md-10 {
+  border-width: 0 5px 0 5px;
+  border-style: solid;
+  border-color: #222;
+  background: #FFF;
+  padding: 0; }
 
 header {
   color: #FFFFFF;
-  background-color: #263956; }
+  background-color: #263956;
+  margin-bottom: 20px;
+  height: 100px; }
+  header h1 {
+    text-align: center;
+    font-size: 42px;
+    padding: 20px; }
+
+nav {
+  margin: 20px; }
 
 section {
-  width: 800px;
-  margin: 0 auto;
-  text-align: left; }
+  padding: 15px; }
 
 article {
-  border-bottom: 1px solid #ccc; }
-  article p {
-    background-color: #EEE; }
+  margin-bottom: 30px; }
   article p.pub-date {
-    display: inline;
     float: right;
-    background-color: transparent; }
-  article h1 {
-    color: #B0413E;
-    font-size: 1.2em; }
+    display: inline; }
+  article .admin-editing {
+    position: relative;
+    top: -22px;
+    float: right;
+    display: inline; }
 
 /*# sourceMappingURL=blog.css.map */
