--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,10 +2,24 @@
 
 {% block content %}
   {% for post in posts %}
-    <article>
-      <p class="pub-date">published: {{ post.published_date }}</p>
-      <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post }} </a></h1>
-      <p>{{ post.text | linebreaksbr }}</p>
+
+    <article class="panel panel-default">
+
+      <div class="panel-heading">
+        <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post }} </a></h1>
+        <div class="admin-editing">
+          <button type="button" class="btn btn-default" aria-label="Add a post">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+          </button>
+        </div>
+      </div>
+
+      <div class="panel-body">
+               <p class="pub-date label label-default">{{ post.published_date }}</p>
+        <p>{{ post.text | linebreaksbr }}</p>
+      </div>
+
     </article>
+
   {% endfor %}
 {% endblock %}
