--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,9 +8,41 @@
       <h1>{{ post.title }}
         {% if post.published_date %}
           <small>{{ post.published_date }}</small>
+        {% else %}
+          <a href="{% url 'post_publish' pk=post.pk%}" class="btn btn-default">發佈文章 </a>
         {% endif %}
       </h1></div>
-    <div class="panel-body"><p>{{ post.text|linebreaksbr }}</p></div>
+    <div class="panel-body">
+      {% if user.is_authenticated %}
+      <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
+        <span class="glyphicon glyphicon-pencil">Edit</span>
+      </a>
+      {% endif %}
+      <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+    
+    <hr>
+    <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">新增回應</a>
+
+    {% for comment in post.comments.all %}
+      {% if user.is_authenticated or comment.approved_comment %}
+
+        <div class="comment">
+          <div class="date">{{ comment.created_date }}
+          {% if not comment.approved_comment %}
+            <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+            <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+          {% endif %}
+          </div>
+          <strong>{{ comment.author }}</strong>
+          <p>{{ comment.text | linebreaks }}</p>
+        </div>
+      {% endif %}
+    {% empty %}
+      <p>沒有回覆</p>
+    {% endfor %}
 
   </article>
+
+
 {% endblock %}
