--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   
-  <h1>New post</h1>
+  <h1>Let's Post</h1>
   <form method="POST" class="post-form"> {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="save btn btn-default">Publish</button>
