--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,29 @@
 
       <div class="panel-heading">
         <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post }} </a></h1>
-        <div class="admin-editing">
-          <button type="button" class="btn btn-default" aria-label="Add a post">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          </button>
-        </div>
-      </div>
+              </div>
 
       <div class="panel-body">
+        <div class="admin-editing">
+          {% if user.is_authenticated %}
+          <a href="{% url 'post_edit' pk=post.pk %}">
+          <button type="button" class="btn btn-default" aria-label="Edit the post">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+          </button>
+          </a>
+        
+          <a href="{% url 'post_delete' pk=post.pk %}">
+          <button type="button" class="btn btn-default" aria-label="Delete the post">
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          </button>
+          </a>
+
+          {% endif %}
+        </div>
+
                <p class="pub-date label label-default">{{ post.published_date }}</p>
         <p>{{ post.text | linebreaksbr }}</p>
+        <a href="{% url 'post_detail' pk=post.pk %}">有{{ post.approved_comments.count }}條回應</a>
       </div>
 
     </article>
